Logs/nanotec_yes.out
  File "/Users/christerolsen/nanotec_yes_to_all.sh", line 2
    END=$((SECONDS + 43200))
        ^
SyntaxError: invalid syntax
🔬 NanoTec overvåkning startet: Sat Jul 26 16:02:18 CEST 2025
✅ NanoTec kjørte ferdig: Sat Jul 26 16:02:18 CEST 2025
